Added latest grid classes

--- a/Street Art Map/Base.lproj/Main.storyboard
+++ b/Street Art Map/Base.lproj/Main.storyboard
@@ -351,6 +351,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="IiH-x5-zZk"/>
+        <segue reference="w2N-b7-Qzf"/>
     </inferredMetricsTieBreakers>
 </document>
