--- a/Street Art Map/ViewArtistTVC.xib
+++ b/Street Art Map/ViewArtistTVC.xib
@@ -22,7 +22,7 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="I8y-fN-eOp">
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="I8y-fN-eOp">
                         <rect key="frame" x="0.0" y="86" width="303" height="108"/>
                         <constraints>
                             <constraint firstAttribute="height" secondItem="I8y-fN-eOp" secondAttribute="width" multiplier="1:2.8" id="eY3-qT-6hQ"/>
@@ -34,12 +34,6 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
-                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="X photos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8t-Ib-Chp">
-                        <rect key="frame" x="0.0" y="0.0" width="66" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="I8y-fN-eOp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Hk9-9b-URB"/>
@@ -52,7 +46,6 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="artworkImagesCV" destination="I8y-fN-eOp" id="UTO-03-78F"/>
-                <outlet property="photosCountLabel" destination="i8t-Ib-Chp" id="1jQ-zg-2yD"/>
                 <outlet property="titleLabel" destination="t66-9K-TcH" id="l91-SK-J93"/>
             </connections>
             <point key="canvasLocation" x="48.5" y="305.5"/>
